# splines

./: Cargo.toml
src/: interpolate.rs  iter.rs  lib.rs  nalgebra.rs  spline.rs
